# Natrix

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakeLists__OLD.txt  Natrix  build.ninja  cmake_install.cmake  test.bat
.cmake/api/v1/reply/: cache-v2-d80f973ac7d2b8a71973.json  cmakeFiles-v1-2f0467a4d494f7160ba6.json  codemodel-v2-2e7290e6220750b91ccf.json  index-2023-06-27T14-14-33-0403.json  target-Natrix-c9c1c9ef19eab90e1fa9.json
src/: Natrix.cpp  main.cpp
src/Engine/AI/: AI.cpp  AI.hpp  PassedPawnMasks.hpp  PawnShieldMasks.hpp
src/Engine/Base/MoveGeneration/: KingMasks.hpp  KnightMasks.hpp  SlidersMasks.hpp
src/Engine/Base/PositionRepresentation/: Bitboard.hpp  Move.cpp  Move.hpp  ZobristHash.cpp  ZobristHashConstants.hpp
src/UI/: UICore.cpp
